# rtp-llm

./: .env.example  .env.test.example  .gitignore  Dockerfile  README.md  example.py  example_rest_callback_usage.py  pyproject.toml  requirements.txt  singleton_api.py  test.py  test_debug_env.py  test_rest_callback_fix.py
entrypoints/: singleton_api.py
examples/: providers.json  rest_callback_example.py  rtp-communication.py
src/: agents.py  audio_logger.py  rtp_server.py
src/buffer/: __init__.py
src/entrypoint/: README.md  __init__.py  exceptions.py  rtllm.py  server_manager.py  settings.py
src/entrypoint/api/: __init__.py  audio_router.py  config_router.py  dependencies.py  server_router.py
src/entrypoint/models/: __init__.py  audio.py  config.py  responses.py  server.py
src/entrypoint/utils/: audio_logs.py  logging_utils.py  port_manager.py
src/entrypoints/: config.py  multi_api.py  singleton_api.py
src/examples/: rtp-communication.py
src/flow/: base.py  copy_flow.py
src/history/: __init__.py
src/providers/: __init__.py  gemini.py
src/rtp_llm/: __init__.py  agents.py  audio_logger.py  rtp_server.py  server.py
src/rtp_llm/adapters/: __init__.py  base.py  local.py  rtp.py  websocket.py
src/rtp_llm/buffer/: array_buffer.py  base.py
src/rtp_llm/cache/: __init__.py  base.py  inmem.py  null.py  rredis.py
src/rtp_llm/callbacks/: __init__.py  base.py  null_callback.py  rest_callback.py
src/rtp_llm/flow/: __init__.py  base.py  copy_flow.py
src/rtp_llm/history/: base.py  limiter.py
src/rtp_llm/providers/: __init__.py  alpaca.py  base.py  gemini.py
src/rtp_llm/utils/: __init__.py  audio_processing.py  rtp_processing.py
src/rtp_llm/vad/: __init__.py  base.py  silero.py  webrtc.py
src/vad/: base.py  webrtc.py
tests/: requirements.txt  test_providers.py  test_vad.py
