[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtp_llm"
version = "1.0.0"
description = "simple building blocks for creating real-time agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "XvKuoMing", email = "kamasalyamov@gmail.com"}
]
license = "MIT"
keywords = ["rtp", "voice", "ai", "real-time", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.115.12",
    "google-genai==1.14.0",
    "numpy>=1.22",
    "openai==1.76.0",
    "pydantic==2.11.3",
    "pydantic-settings>=2.5.2",
    "scipy>=1.10",
    "setuptools==80.0.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "silero-vad>=5.1.2",
    "uvicorn==0.34.2",
    "webrtcvad==2.0.10",
    # Conditional dependencies using environment markers # audiopp was deprecated in python 3.13
    "audioop-lts; python_version>='3.13'",
    "opuslib>=3.0.0",
    "websockets>=15.0.1",
    "redis[hiredis]>=6.2.0",
]

# Optional dependencies (extras)
[project.optional-dependencies]
# if user wants to run tests locally
tests = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# CLI entry points
[project.scripts]
rtllm = "entrypoint.rtllm:main"

# Package URLs
[project.urls]
"Homepage" = "https://github.com/XvKuoMing/rtp-llm"
"Bug Reports" = "https://github.com/XvKuoMing/rtp-llm/issues"
"Source" = "https://github.com/XvKuoMing/rtp-llm.git"

# setuptools configuration
[tool.setuptools.packages.find]
where = ["src"]
include = ["rtp_llm*", "entrypoint*"]
namespaces = false

[tool.setuptools.package-data]
rtp_llm = ["*.md"]

